<resources>
    <string name="app_name">MaterialDesignSetting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notify_priority">notify_priority</string>
    <string name="title_activity_setting">设置</string>
    <string name="xiaomi_attention">
        <![CDATA[小米系统用户请进入系统应用:安全中心->授权管理->自启动应用管理 后允许『贝壳单词』自启动，否则无法自启动]]></string>
    <string name="toast_close">当前为关闭。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>
    <string name="toast_open">当前为开启。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>
    <string name="pref_general_settings">General Settings</string>
    <string name="pref_general_note_color_title">Default note color</string>
    <string name="pref_general_note_color_summary">Choose default color for newly created note</string>
    <string name="pref_general_font_title">Font style</string>
    <string name="pref_general_font_summary">Choose font style for notes</string>
    <string name="pref_general_font_size_title">Font size</string>
    <string name="pref_general_font_size_summary">Choose font size</string>
    <string name="pref_appearance_settings">Appearance</string>
    <string name="pref_grid_animation_title">Grid animation</string>
    <string name="pref_grid_animation_summary">Apply animation to notes grid</string>
    <string name="pref_animation_type_title">Animation</string>
    <string name="pref_animation_type_summary">Fade</string>
    <string name="pref_sort_settings">Sort Order</string>
    <string name="pref_sort_order_title">Default notes sort order</string>
    <string name="pref_sort_order_summary">by created time</string>
    <string name="pref_trash_settings">Trash Settings</string>
    <string name="pref_delete_old_note_title">Auto-erase Trash notes</string>
    <string name="pref_delete_old_note_summary">Permanently erase Trash notes when maximum number of deleted notes is exceeded</string>
    <string name="pref_delete_old_note_limit_title">Trash notes limit</string>
    <string name="pref_delete_old_note_limit_summary">500 notes</string>
    <string name="pref_security_settings">Security Settings</string>
    <string name="pref_create_password_title">Set / Change password</string>
    <string name="pref_create_password_summary">Password will be used to secure your notes and backups</string>
    <string name="pref_clear_password_title">Clear password</string>
    <string name="pref_clear_password_summary">After removing password all of your locked notes will be unlocked</string>
    <string name="pref_lock_application_title">Lock application</string>
    <string name="pref_lock_application_summary">Password will be required to enter in this application</string>
    <string name="pref_backup_settings">Backup Settings</string>
    <string name="pref_backup_location_title">Default location</string>
    <string name="pref_backup_location_summary">Choose backup location</string>
    <string name="pref_include_trash_note_title">Include Trash notes</string>
    <string name="pref_include_trash_note_summary">Include all trash notes to backup file</string>
    <string name="pref_auto_backup_title">Auto backup</string>
    <string name="pref_auto_backup_summary">Daily backups occur at 4:00AM</string>
    <string name="pref_restore_settings">Import Settings</string>
    <string name="pref_delete_existing_notes_title">Clear all notes</string>
    <string name="pref_delete_existing_notes_summary">Clear all existing notes before importing notes from memory card</string>
    <string name="pref_overwrite_existing_notes_title">Overwrite notes</string>
    <string name="pref_overwrite_existing_notes_summary">Overwrite existing notes that conflicts with the notes being imported</string>
    <string name="pref_about">About</string>
    <string name="pref_about_title">Notepad 1.1.0</string>
    <string name="pref_about_summary">Copyright © 2013-2014 Ferdous Ahamed</string>
</resources>
